ocp/app_deployment/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-quote-app-backend
  labels:
    app: car-quote-app
    component: backend
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: car-quote-app
    component: backend
