ocp/app_deployment/backend/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: car-quote-app-backend
  labels:
    app: car-quote-app
    component: backend
spec:
  to:
    kind: Service
    name: car-quote-app-backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
